# mlia-ethos-u

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  pr-internal-checks.yml  release.yml
docs/: Makefile  README.md
docs/source/: backends.md  cli.md  development.md  ethos_u_api_walkthrough.ipynb  ethos_u_api_walkthrough.ipynb.license  index.md  outputs_metrics.md  target_profiles.md  troubleshooting.md
pre_commit_hooks/: check_copyright_header.py
src/mlia/: __init__.py
src/mlia/backend/: __init__.py
src/mlia/backend/corstone/: __init__.py  install.py  performance.py  plugin.py
src/mlia/backend/vela/: __init__.py  compat.py  compiler.py  install.py  performance.py  plugin.py
src/mlia/resources/backends/applications/: APPLICATIONS.txt
src/mlia/resources/backends/applications/inference_runner-sse-300-22.08.02-ethos-U55-Default-noTA/: ethos-u-inference_runner.axf
src/mlia/resources/backends/applications/inference_runner-sse-300-22.08.02-ethos-U65-Default-noTA/: ethos-u-inference_runner.axf
src/mlia/resources/backends/applications/inference_runner-sse-300-26.03.0-executorch-ethos-U55-Default-noTA/: mlek_inference_runner.axf.license
src/mlia/resources/backends/applications/inference_runner-sse-300-26.03.0-tflm-ethos-U65-Default-noTA/: mlek_inference_runner.axf
src/mlia/resources/backends/applications/inference_runner-sse-310-22.08.02-ethos-U55-Default-noTA/: ethos-u-inference_runner.axf
src/mlia/resources/backends/applications/inference_runner-sse-310-22.08.02-ethos-U65-Default-noTA/: ethos-u-inference_runner.axf
src/mlia/resources/backends/applications/inference_runner-sse-310-26.03.0-tflm-ethos-U55-Default-noTA/: mlek_inference_runner.axf
src/mlia/resources/backends/applications/inference_runner-sse-310-26.03.0-tflm-ethos-U65-Default-noTA/: mlek_inference_runner.axf
src/mlia/resources/backends/applications/inference_runner-sse-320-22.08.02-ethos-U85-Default-noTA/: ethos-u-inference_runner.axf  ethos-u-inference_runner.axf.license
src/mlia/resources/backends/applications/inference_runner-sse-320-26.03.0-tflm-ethos-U85-Default-noTA/: mlek_inference_runner.axf
src/mlia/resources/target_profiles/: ethos-u55-128.toml  ethos-u55-256.toml  ethos-u65-256.toml  ethos-u65-512.toml  ethos-u85-1024.toml  ethos-u85-128.toml  ethos-u85-2048.toml  ethos-u85-256.toml  ethos-u85-512.toml
src/mlia/resources/vela/: vela.ini
tests/: __init__.py  conftest.py  test_api_ethos.py  test_backend_corstone.py  test_backend_corstone_install.py  test_backend_corstone_performance.py  test_backend_install_ethos.py  test_backend_registry.py  test_backend_vela_compat.py  test_backend_vela_compiler.py  test_backend_vela_lazy_loading.py  test_backend_vela_performance.py  test_check_copyright_header.py  test_cli_command_validators.py  test_cli_commands.py  test_cli_main.py  test_cli_options.py  test_e2e.py  test_e2e_api.py  test_target_config.py  test_target_ethos_u_advice_generation.py  test_target_ethos_u_advisor.py  test_target_ethos_u_common_reporters.py  test_target_ethos_u_config.py  test_target_ethos_u_data_analysis.py  test_target_ethos_u_data_collection.py  test_target_ethos_u_handlers.py  test_target_ethos_u_operators.py  test_target_ethos_u_pattern_analysis.py  test_target_ethos_u_performance.py  test_target_ethos_u_reporters.py  test_target_registry.py  test_utils_filesystem_ethos.py  test_utils_model_format.py
tests/test_resources/vela/: sample_vela.ini
tests/utils/: __init__.py  common.py  logging.py  rewrite.py
