# SPDX-FileCopyrightText: Copyright 2026, Arm Limited and/or its affiliates.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "mlia-ethos-u"
dynamic = ["version"]
description = "ML Inference Advisor Ethos Plugin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlia>=0.11.0.dev6"
]
keywords = ["ml", "arm", "ethos", "tflite"]
authors = [{name = "Arm Ltd", email = "mlia@arm.com"}]
license = "Apache-2.0"
license-files = ["LICENSES/*.txt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/arm/mlia-ethos-u.git"

[project.entry-points."mlia.plugin.target"]
ethos_u = "mlia.target.ethos_u.plugin:EthosUTargetPlugin"

[project.entry-points."mlia.plugin.backend"]
corstone = "mlia.backend.corstone.plugin:CorstoneBackendPlugin"
vela = "mlia.backend.vela.plugin:VelaBackendPlugin"

[build-system]
requires = [
    "hatchling>=1.27.0",
    "uv-dynamic-versioning>=0.8.2,<0.9.0"
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/mlia"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
pattern = "default-unprefixed"
bump = true
fallback-version = "0.0.0.dev0"

[tool.mypy]
# Suppress errors for optional dependencies and cross-repo imports.
ignore_missing_imports = true

[tool.blocklint]
max_issue_threshold = 1
blocklist = ["master", "slave", "blacklist", "whitelist", "dummy"]
wordlist = ["he", "she", "him", "her", "his", "hers"]
skip_files = ["LICENSES/CC-PDDC.txt", "docs/source/conf.py"]

[tool.commitizen]
name = "cz_customize"
tag_format = "$version"
version_scheme = "semver"
version_provider = "scm"
update_changelog_on_bump = true

[tool.commitizen.customize]
schema_pattern = "(?s)(build|ci|docs|feat|fix|perf|refactor|style|test)(\\(\\S+\\))?!?:( [A-Z][^\\n\\r]+)((\\n\\n.*)|(\\s*))?$"
schema = "<type>(<scope>): <Subject-capitalized>\n<BLANK LINE>\n<body>\n<BLANK LINE>\n(BREAKING CHANGE: )<footer>"
commit_parser = "^((?P<change_type>build|ci|docs|feat|fix|perf|refactor|style|test|BREAKING CHANGE)(?:\\((?P<scope>[^()\\r\\n]*)\\)|\\()?(?P<breaking>!)?|\\w+!):\\s(?P<message>.*)?"
change_type_map = {"feat" = "Feature changes", "fix" = "Bug fix", "perf" = "Performance improvements", "build" = "Development changes"}

[tool.pytest]
addopts = [
    "--cov=mlia",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=65"
]

[dependency-groups]
test = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "flaky~=3.8.1",
    "numpy==2.2.6",
    "tensorflow",
    "tf-keras"
]
dev = [
    {include-group = "test"},
    "mypy==1.5.1",
    "pip>=26.1",
    "pre-commit==4.5.1"
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "pymdown-extensions>=10.0,<11.0"
]
