# SPDX-FileCopyrightText: Copyright 2026, Arm Limited and/or its affiliates.
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = mlia-ethos-u
version = 0.1.0
description = ML Inference Advisor Ethos Plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arm/mlia.git
author = Arm Ltd
author_email = mlia@arm.com
license = Apache-2.0
license_files = LICENSES/*.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = ml, arm, ethos, tflite

[options]
include_package_data = True
python_requires = >=3.9.0
package_dir =
    = src
packages = find_namespace:
install_requires =
    mlia>=0.9.3.dev0

[options.packages.find]
where = src
include =
    mlia
    mlia.backend
    mlia.backend.corstone*
    mlia.backend.vela*
    mlia.target
    mlia.target.ethos_u*

[options.entry_points]
mlia.plugin.target =
    ethos_u=mlia.target.ethos_u.plugin:EthosUTargetPlugin
mlia.plugin.backend =
    corstone=mlia.backend.corstone.plugin:CorstoneBackendPlugin
    vela=mlia.backend.vela.plugin:VelaBackendPlugin

[options.package_data]
mlia =
    resources/backends/**/*
    resources/vela/**/*
    resources/target_profiles/ethos-u*.toml

[flake8]
ignore = E501, W503
max-complexity = 18
select = B,C,E,F,W,T4

[blocklint]
max_issue_threshold=1
blocklist=master,slave,blacklist,whitelist,dummy
wordlist=he,she,him,her,his,hers
skip_files=LICENSES/CC-PDDC.txt,docs/source/conf.py
